2013-07-15  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15711]
	* sysdeps/unix/sysv/linux/Makefile ($(objpfx)bits/syscall%h):
	Avoid system header dependency with -ffreestanding.
	($(objpfx)bits/syscall%d): Likewise.

2013-07-13  David S. Miller  <davem@davemloft.net>

	* math/libm-test.inc (casin_test_data): Annotate more cases of missing
	underflows from atanl/atan2l due to bug 15319.
	(casinh_test_data): Likewise.

2013-07-07  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Regenerate from scratch.

2013-07-05  Jeroen Albers  <_jeroen_@yahoo.com>

	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-07-04  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* configure.in (--enable-lock-elision): Fix message text.
	* INSTALL: Regenerate.
	* configure: Regenerate.

2013-07-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2013-07-03  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/sys/ptrace.h (PTRACE_LISTEN): Add
	define.
	(PTRACE_PEEKSIGINFO): Add new value from Linux 3.10.
	(ptrace_peeksiginfo_args): Add.
	(__ptrace_peeksiginfo_flags): Add.
	* sysdeps/unix/sysv/linux/sparc/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/sys/ptrace.h: Likewise.

2013-07-03  Allan McRae  <allan@archlinux.org>

	* sysdeps/i386/fpu/libm-test-ulps: Update.

2013-07-02  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2013-07-02  Markus Trippelsdorf  <markus@trippelsdorf.de>

	* sysdeps/x86_64/fpu/libm-test-ulps: Update.

2013-07-02  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/i386/fpu/libm-test-ulps: Regenerated.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-07-02  Andi Kleen <ak@linux.intel.com>

	* config.h.in (ENABLE_LOCK_ELISION): Add.
	* configure.in (--enable-lock-elision): Add option.