@@ -12,8 +12,9 @@ sysdep_headers += sys/reg.h
 endif
 
 ifeq ($(subdir),elf)
-sysdep_routines += dl-vdso libc-m68k-vdso
-sysdep-rtld-routines += m68k-vdso
+sysdep-dl-routines += dl-static
+sysdep_routines += dl-vdso libc-m68k-vdso dl-static
+sysdep-rtld-routines += m68k-vdso dl-static
 sysdep-others += lddlibc4
 install-bin += lddlibc4
 endif
