@@ -1,3 +1,8 @@
+2013-07-20  David S. Miller  <davem@davemloft.net>
+
+	* sysdeps/sparc/fpu/libm-test-ulps: Update ULPs to handle minor
+	difference between 32-bit and 64-bit.
+
 2013-07-15  Carlos O'Donell  <carlos@redhat.com>
 
 	[BZ #15711]
